Fixed issues with responsiveness on mobile

--- a/public/main.css
+++ b/public/main.css
@@ -586,22 +586,17 @@ video {
   z-index: -10;
 }
 
-.m-auto{
-  margin: auto;
-}
-
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
 }
 
-.my-auto{
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
 .mb-10{
   margin-bottom: 2.5rem;
+}
+
+.mb-3{
+  margin-bottom: 0.75rem;
 }
 
 .mb-5{
@@ -616,24 +611,8 @@ video {
   margin-top: 1.25rem;
 }
 
-.mb-3{
-  margin-bottom: 0.75rem;
-}
-
-.mt-20{
-  margin-top: 5rem;
-}
-
-.mt-0{
-  margin-top: 0px;
-}
-
-.ml-0{
-  margin-left: 0px;
-}
-
-.flex{
-  display: flex;
+.mt-2{
+  margin-top: 0.5rem;
 }
 
 .grid{
@@ -644,80 +623,52 @@ video {
   display: none;
 }
 
-.h-1\/2{
-  height: 50%;
+.h-40{
+  height: 10rem;
+}
+
+.h-auto{
+  height: auto;
 }
 
 .h-1{
   height: 0.25rem;
 }
 
-.h-2\/3{
-  height: 66.666667%;
+.h-1\.5{
+  height: 0.375rem;
 }
 
-.h-1\/3{
-  height: 33.333333%;
+.h-5{
+  height: 1.25rem;
 }
 
-.h-60{
-  height: 15rem;
+.h-10{
+  height: 2.5rem;
 }
 
 .h-20{
   height: 5rem;
 }
 
-.h-40{
-  height: 10rem;
-}
-
-.w-full{
-  width: 100%;
+.h-60{
+  height: 15rem;
 }
 
 .w-2{
   width: 0.5rem;
 }
 
-.w-5{
-  width: 1.25rem;
-}
-
-.w-3{
-  width: 0.75rem;
-}
-
-.w-4{
-  width: 1rem;
-}
-
-.w-3\.5{
-  width: 0.875rem;
+.w-full{
+  width: 100%;
 }
 
 .w-1{
   width: 0.25rem;
 }
 
-.w-1\/2{
-  width: 50%;
-}
-
-.w-1\/3{
-  width: 33.333333%;
-}
-
-.max-w-md{
-  max-width: 28rem;
-}
-
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-rows-2{
-  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
 .items-center{
@@ -734,18 +685,8 @@ video {
   margin-left: calc(5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-x-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .overflow-y-scroll{
   overflow-y: scroll;
-}
-
-.fill-current{
-  fill: currentColor;
 }
 
 .fill-white{
@@ -755,10 +696,6 @@ video {
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.p-5{
-  padding: 1.25rem;
 }
 
 .pl-10{
@@ -813,36 +750,16 @@ video {
     right: 0px;
   }
 
-  .md\:order-2{
-    order: 2;
-  }
-
   .md\:order-1{
     order: 1;
   }
 
-  .md\:m-auto{
-    margin: auto;
-  }
-
-  .md\:mt-10{
-    margin-top: 2.5rem;
-  }
-
-  .md\:mt-20{
-    margin-top: 5rem;
+  .md\:order-2{
+    order: 2;
   }
 
   .md\:mb-10{
     margin-bottom: 2.5rem;
-  }
-
-  .md\:mt-0{
-    margin-top: 0px;
-  }
-
-  .md\:ml-3{
-    margin-left: 0.75rem;
   }
 
   .md\:flex{
@@ -857,64 +774,20 @@ video {
     height: 66.666667%;
   }
 
-  .md\:h-5{
-    height: 1.25rem;
-  }
-
-  .md\:h-full{
-    height: 100%;
-  }
-
   .md\:w-1\/2{
     width: 50%;
-  }
-
-  .md\:w-4{
-    width: 1rem;
   }
 
   .md\:w-5{
     width: 1.25rem;
   }
 
-  .md\:w-10{
-    width: 2.5rem;
-  }
-
-  .md\:w-2\/3{
-    width: 66.666667%;
-  }
-
   .md\:max-w-md{
     max-width: 28rem;
   }
 
-  .md\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .md\:items-center{
-    align-items: center;
-  }
-
-  .md\:justify-end{
-    justify-content: flex-end;
-  }
-
-  .md\:justify-center{
-    justify-content: center;
-  }
-
   .md\:fill-black{
     fill: #000;
-  }
-
-  .md\:text-center{
-    text-align: center;
-  }
-
-  .md\:text-justify{
-    text-align: justify;
   }
 
   .md\:text-5xl{
